# NeuroScan-AI-Diagnostic-System

./: .gitignore  README.md  frontend.py  pyproject.toml
chroma_db/0fb99934-8ec9-42c7-b241-caf5efd0d7cc/: index_metadata.pickle
data/: Dataset_link
src/: config.py  diagnosis_pipeline.py  inference.py  preprocessing.py  rag_ingest.py  retriever.py
